tests/baselines/reference/asyncConstructor_es2017.errors.txt
tests/cases/conformance/async/es2017/asyncConstructor_es2017.ts(2,3): error TS1089: 'async' modifier cannot appear on a constructor declaration.


==== tests/cases/conformance/async/es2017/asyncConstructor_es2017.ts (1 errors) ====
    class C {  
      async constructor() {    
      ~~~~~
!!! error TS1089: 'async' modifier cannot appear on a constructor declaration.
      }
    }